--- a/package.json
+++ b/package.json
@@ -2,17 +2,38 @@
   "name": "crissaegrim",
   "version": "0.0.1",
   "description": "Symphony of the Night save file editor",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
   "repository": {
     "url": "https://github.com/mcred/crissaegrim",
     "type": "git"
   },
   "author": "mcred (Derek Smart)",
   "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --progress --profile --colors --display-error-details --display-cached",
+    "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+    "electron": "electron app"
+  },
+  "devDependencies": {
+    "electron-prebuilt": "^1.2.0",
+    "es6-shim": "^0.35.0",
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "typings": "^0.8.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
   "dependencies": {
-    "electron": "^1.4.6"
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.26",
+    "zone.js": "^0.6.12"
   }
 }
