--- a/package.json
+++ b/package.json
@@ -15,29 +15,30 @@
     "electron": "electron app"
   },
   "devDependencies": {
-    "@types/electron": "^1.4.26",
-    "@types/node": "^6.0.46",
-    "awesome-typescript-loader": "^2.2.4",
+    "@types/electron": "^1.4.27",
+    "@types/node": "^6.0.48",
+    "awesome-typescript-loader": "^3.0.0-beta.3",
     "babel-core": "^6.18.2",
-    "concurrently": "^3.0.0",
-    "electron-prebuilt": "^1.2.0",
-    "es6-shim": "^0.35.0",
+    "concurrently": "^3.1.0",
+    "electron-prebuilt": "^1.3.9",
+    "es6-shim": "^0.35.1",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.0",
+    "typescript": "^2.0.10",
     "webpack": "^2.1.0-beta.25"
   },
   "dependencies": {
-    "@angular/common": "2.2.0",
-    "@angular/compiler": "2.2.0",
-    "@angular/core": "2.2.0",
-    "@angular/http": "2.2.0",
-    "@angular/platform-browser": "2.2.0",
-    "@angular/platform-browser-dynamic": "2.2.0",
-    "@angular/router": "3.2.0",
-    "angular-in-memory-web-api": "~0.1.5",
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/router": "3.2.1",
+    "angular-in-memory-web-api": "~0.1.15",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-rc.3",
-    "zone.js": "^0.6.25"
+    "rxjs": "5.0.0-rc.4",
+    "zone.js": "^0.6.26",
+    "ui-router-ng2": "^1.0.0-beta.3"
   }
 }
