--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "app/app.ts",
     "app/app.component.ts",
     "app/app.module.ts",
-    "app/character.component.ts"
+    "app/character.component.ts",
+    "app/selectfile.component.ts"
   ]
 }
