--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "app/app.component.ts",
     "app/app.module.ts",
     "app/character.component.ts",
-    "app/selectfile.component.ts"
+    "app/selectfile.component.ts",
+    "app/file.service.ts"
   ]
 }
