--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,10 @@
   },
   "files": [
     "app/app.ts",
-    "app/app.component.ts",
-    "app/app.module.ts",
-    "app/character.component.ts",
-    "app/selectfile.component.ts",
-    "app/file.service.ts"
+    "app/components/app.component.ts",
+    "app/bootstrap.ts",
+    "app/components/character.component.ts",
+    "app/components/selectfile.component.ts",
+    "app/services/file.service.ts"
   ]
 }
