bind HP to alucard model with ngForm
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "app/components/character.component.ts",
     "app/components/selectfile.component.ts",
     "app/services/file.service.ts",
-    "app/custom/sotn.ts"
+    "app/custom/sotn.ts",
+    "app/models/alucard.ts"
   ]
 }
