update inventory and add to tsconfig
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "app/components/selectfile.component.ts",
     "app/services/file.service.ts",
     "app/custom/sotn.ts",
-    "app/models/alucard.ts"
+    "app/models/alucard.ts",
+    "app/models/inventory.ts"
   ]
 }
