ignore auto generated files
Signed-off-by: Derek Smart <derek@grindaga.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ npm-debug.log
 *.map
 Crissaegrim*
 /movies
+/app/components/*.js
+/app/custom/*.js
+/app/models/*.js
+/app/services/*.js
+/app/bootstrap.js
