--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "app/custom/sotn.ts",
     "app/models/alucard.ts",
     "app/models/inventory.ts",
-    "app/models/relics.ts"
+    "app/models/relics.ts",
+    "app/components/relics.component.ts"
   ]
 }
