--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-node_modules
-workfiles
-build
-npm-debug.log
-.DS_Store
-*.map
-Crissaegrim*
-/movies
-/app/components/*.js
-/app/custom/*.js
-/app/models/*.js
-/app/services/*.js
-/app/bootstrap.js
+notes
+target
+.idea
+bin
+coverage
