--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>tornadofx</artifactId>
             <version>1.7.18</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
